--- a/app/views/charges/_credit_card_form.html.erb
+++ b/app/views/charges/_credit_card_form.html.erb
@@ -2,16 +2,16 @@
   <div class="row">
     <div class="col-md-12">
       <div class="new-card-form">
-        <%= text_field_tag :credit_card_number, nil, :class => "form-control", :placeholder => "Credit Card Number"  %> 
+        <%= telephone_field_tag :credit_card_number, nil, :class => "form-control", :placeholder => "Credit Card Number"  %> 
         <div class="row"> 
           <div class="col-md-4">
-            <%= text_field_tag :expiration_month, nil,  :class => "form-control", :placeholder => "MM" %>
+            <%= telephone_field_tag :expiration_month, nil,  :class => "form-control", :placeholder => "MM" %>
           </div>
           <div class="col-md-4">
-            <%= text_field_tag :expiration_year, nil, :class => "form-control", :placeholder => "YY" %>
+            <%= telephone_field_tag :expiration_year, nil, :class => "form-control", :placeholder => "YY" %>
           </div>
           <div class="col-md-4">
-            <%= text_field_tag :security_code, nil, :class => "form-control", :placeholder => "CVC" %>
+            <%= telephone_field_tag :security_code, nil, :class => "form-control", :placeholder => "CVC" %>
           </div>
         </div>
       </div>
