all radio fixed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -95,7 +95,8 @@
 		<% end %>
 			
 
-		<div id="order-form" class="the-menu">
+		<div id="order-form">
+			<div class="the-menu">
 
 	<!--    <div class="row-new">
 	      <div class="panel-heading"><h3>FOODOOD</h3></div>
@@ -113,6 +114,7 @@
 
 
 			<%= yield %>
+			</div>
 		</div>
 				
 	</div>
