--- a/app/assets/stylesheets/base/_inputs.scss
+++ b/app/assets/stylesheets/base/_inputs.scss
@@ -37,3 +37,18 @@ input[type="checkbox"]:checked.modifier + label {
   background-color:#444;
   border-color: khaki;
 }
+
+
+label.charges {
+  padding: 2px 1em 0 0;
+  display: inline-block;
+}
+input[type=radio].charges,
+input.radio.charges {
+  margin: 2px 0 0 2px; 
+  width:25px;
+  border: none;
+  display: inline-block;
+}
+
+input[type="tel"].error { border: 1px solid #780000  }
