--- a/app/assets/stylesheets/components/general.scss
+++ b/app/assets/stylesheets/components/general.scss
@@ -6,20 +6,14 @@
 }
 
 #order-form {
-  margin: 0px auto;
-  min-width: 320px;
-  max-width: 660px;
-  padding-top:15px;
-  padding-bottom:15px;
+  position: relative;
 
-  @media (max-width: 600px) {
-    padding-top:30px;
-  }
 }
 
 .the-menu {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  margin: 70px auto;
+  min-width: 320px;
+  max-width: 660px;
 }
 
 .panel-title {
