--- a/app/views/orders/_display_mods.html.erb
+++ b/app/views/orders/_display_mods.html.erb
@@ -11,14 +11,15 @@
           <td>+ <%= Order.integer_to_currency val.price %></td>
 
           <% if mod.mod_type == 0 %>
-            <td></td>
-            <td colspan="2">
+            <td colspan="2"></td>
+            <td>
               <%#= radio_button_tag("#{mod.name.downcase}", "#{val.name.downcase}") %>
               <% unless ind == 0 %>
-                <input id="<%= mod.name.downcase %>_<%= val.name.downcase %>" name='<%= "#{item.id}_#{mod.id}" %>' class="<%="#{item.id}_modifier"%> modifier radio-mod-1" type="radio" value="<%= val.id %>" data-add-price="<%= val.price %>">
+              <%# purpse is to set first button to check -- the else %>
+                <input id="<%= mod.name.downcase %>_<%= val.name.downcase %>" name='<%= "#{item.id}_#{mod.id}" %>' class="<%="#{item.id}_modifier"%> modifier" type="radio" value="<%= val.id %>" data-add-price="<%= val.price %>">
                 <label for="<%= mod.name.downcase %>_<%= val.name.downcase %>"></label>
               <% else %>
-              <input id="<%= mod.name.downcase %>_<%= val.name.downcase %>" name='<%= "#{item.id}_#{mod.id}" %>' class="<%="#{item.id}_modifier"%> modifier radio-mod-1" type="radio" value="<%= val.id %>" data-add-price="<%= val.price %>" checked>
+              <input id="<%= mod.name.downcase %>_<%= val.name.downcase %>" name='<%= "#{item.id}_#{mod.id}" %>' class="<%="#{item.id}_modifier"%> modifier" type="radio" value="<%= val.id %>" data-add-price="<%= val.price %>" checked>
               <label for="<%= mod.name.downcase %>_<%= val.name.downcase %>"></label>
 
               <% end %>
@@ -26,22 +27,22 @@
           <%end%>
 
           <% if mod.mod_type == 1 %>
-            <td></td>
-            <td colspan="2">
+            <td colspan="2"></td>
+            <td>
               <%#= radio_button_tag("#{mod.name.downcase}", "#{val.name.downcase}") %>
               <% unless ind == 0 %>
-              <input id="<%= mod.name.downcase %>_<%= val.name.downcase %>" name="<%= "#{item.id}_#{mod.id}" %>" class="<%="#{item.id}_modifier"%> modifier radio-mod-1" type="radio" value="<%= val.id %>" data-add-price="<%= val.price %>">
+              <input id="<%= mod.name.downcase %>_<%= val.name.downcase %>" name="<%= "#{item.id}_#{mod.id}" %>" class="<%="#{item.id}_modifier"%> modifier" type="radio" value="<%= val.id %>" data-add-price="<%= val.price %>">
               <label for="<%= mod.name.downcase %>_<%= val.name.downcase %>"></label>
               <% else %>
-              <input id="<%= mod.name.downcase %>_<%= val.name.downcase %>" name="<%= "#{item.id}_#{mod.id}" %>" class="<%="#{item.id}_modifier"%> modifier radio-mod-1" type="radio" value="<%= val.id %>" data-add-price="<%= val.price %>" checked>
+              <input id="<%= mod.name.downcase %>_<%= val.name.downcase %>" name="<%= "#{item.id}_#{mod.id}" %>" class="<%="#{item.id}_modifier"%> modifier" type="radio" value="<%= val.id %>" data-add-price="<%= val.price %>" checked>
               <label for="<%= mod.name.downcase %>_<%= val.name.downcase %>"></label>
               <% end %>
             </td>
           <%end%>
 
           <% if mod.mod_type == 2 %>
-            <td></td>
-            <td colspan="2">
+            <td colspan="2"></td>
+            <td>
               <%#= check_box("#{mod.name.downcase}", "#{val.name.downcase}") %>
               <input id="<%= mod.name.downcase %>_<%= val.name.downcase %>" name="<%= "#{item.id}_#{mod.id}" %>" class="<%="#{item.id}_modifier"%> modifier" type="checkbox" value="<%= val.id %>" data-add-price="<%= val.price %>">
               <label for="<%= mod.name.downcase %>_<%= val.name.downcase %>"></label>
