much annoy, many bad

--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -37,7 +37,7 @@
         <br />
         <% end %>
         <div class ="chopped box">
-            <%= radio_button_tag(:user_card, "new", false, :class => "new-card-button charges") %>
+            <%= radio_button_tag(:user_card, "new", false, :class => "charges", id: "new-card-button" ) %>
 <!--             <label class="charges"></label>
  -->            <label class="charges" style="margin-left:5px;"> Add a new card </label>
         </div>
