--- a/app/views/restaurants/analytics.html.erb
+++ b/app/views/restaurants/analytics.html.erb
@@ -1,5 +1,7 @@
 <h3> Analytics </h3>
 
+<%#=COMPLETELY STUBBED OUT DATA FOR NOW....LOGIC TO FIX THIS IN CONTROLLER, JUST COULDN'T GET IT TO LOOK NICE%>
+
 <div class="panel panel-primary">
 <h3 class="panel-heading">New Customers Aquired</h3>
 	<%= line_chart({"$15" => 40, "$8" => 5,"$4" => 3, "$25" => 12,"$13" => 7}) %>
