--- a/app/assets/stylesheets/charges.css
+++ b/app/assets/stylesheets/charges.css
@@ -7,3 +7,5 @@
 
 fieldset { overflow:hidden }
 .box { float:left; display:block; }
+label { float:left; clear:none; padding: 2px 1em 0 0; }
+input[type=radio], input.radio { float:left; clear:none; margin: 2px 0 0 2px; width:25px; border: none;}
