link to howdy page

--- a/app/assets/stylesheets/custom-resizing.css.scss
+++ b/app/assets/stylesheets/custom-resizing.css.scss
@@ -8,6 +8,7 @@
   .topbar { padding: 0 2px 4px 2px; }
   .topbar .shnack { font-size: 2.5em; }
   .topbar .my-gear img { width: 30px; height: 30px; }
+  .caje-info { font-size: 1.5em; };
 }
 
 
