--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -154,6 +154,9 @@
 	</footer>
 
 	<footer class="fb">
+
+	  <a href="/howdy" class="place-order pad">Learn where this Shnack was made<br>Get in contact</a>
+
     <a href="#top" class="place-order">Return to top  |  Place an order</a>
     <p>Follow us on Facebook.</p>
     <p>You might see us at a game.</p>
