--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
 
 <body onload="checkDevice();">
 
-	<div class="website-wrapper">
+	<div class="website-wrapper" id="top">
 		<div id="topbar" class="topbar clear-fix">
 			<a href="/"><h1 class="new gen_inline shnack">Shnack</h1></a>
 
@@ -155,7 +155,7 @@
 
 	<footer class="fb">
 
-	  <a href="/howdy" class="place-order pad">Learn where this Shnack was made<br>Get in contact</a>
+	  <a href="/howdy" class="place-order pad-top pad-lrg-bottom" style="font-size:18px;">Want to start using Shnack?<br>Get in contact</a>
 
     <a href="#top" class="place-order">Return to top  |  Place an order</a>
     <p>Follow us on Facebook.</p>
