--- a/app/assets/stylesheets/base/_utilities.scss
+++ b/app/assets/stylesheets/base/_utilities.scss
@@ -37,18 +37,18 @@ h2.new {
 
 h3.new {
   font-size: 1.5em;
-  font-family: "Poiret One", sans-serif;
+  font-family: "Dosis", sans-serif;
 }
 
 
 .headline-light {
-  font-family: "Poiret One", Geneva, sans-serif;
+  font-family: "Dosis", Geneva, sans-serif;
   color: #EEE;
 }
 
 .headline {
-  font-family: "Poiret One", Geneva, sans-serif;
-  font-weight: 900;
+  font-family: "Dosis", Geneva, sans-serif;
+  font-weight: 500;
 }
 
 .fll { float: left; }
