resets, better organization

--- a/app/assets/stylesheets/base/_utilities.scss
+++ b/app/assets/stylesheets/base/_utilities.scss
@@ -1,9 +1,11 @@
-*, *:before, *:after { box-sizing: border-box; }
-.clear-fix:after { content: ' '; display: table; clear: both; }
-.opac-fix:after { content: ' '; display: table; opacity: 1; }
+@import "vars";
 
-.pad-sml { padding: 10px; }
-.pad     { padding: 20px; }
+.clear-fix:before     { content: ' '; display: table; }
+.clear-fix:after      { content: ' '; display: table; clear: both; }
+.opac-fix:after       { content: ' '; display: table; opacity: 1; }
+
+.pad-sml  { padding: 10px; }
+.pad      { padding: 20px; }
 .pad-lrg  { padding: 30px; }
 
 .pad-right-sml { padding-right: 10px; } 
@@ -21,46 +23,56 @@
 .pad-top-lrg { padding-top: 30px; } 
 .pad-bottom-lrg { padding-bottom: 30px; } 
 
-h1, h2, h3, h4, h5, h6 {
-  margin: 0;
-}
 
-h1.new {
-  font-size: 3em;
-  font-family: "Damion", serif;
-}
+.bold { font-weight: bold; }
+.itatlic { font-style: italic; }
 
-h2.new {
-  font-size: 1.5em;
-  font-family: "Damion", serif;
-}
+.left { float: left; }
+.right { float: right; }
 
-h3.new {
-  font-size: 1.5em;
-  font-family: "Poiret One", sans-serif;
-}
+.text-left { text-align: left; }
+.text-right { text-align: right; }
+.text-center { text-align: center; }
 
+.hide { display: none; }
+.hide-impoertant { display: none !important; }
 
-.headline-light {
-  font-family: "Poiret One", Geneva, sans-serif;
-  color: #EEE;
-}
-
-.headline {
-  font-family: "Poiret One", Geneva, sans-serif;
-  font-weight: 900;
-}
-
-.fll { float: left; }
-.flr { float: right; }
-
+.highlight { background: #ffff99; }
 
 .center {
-  margin: 0 auto;
+  margin-right: auto;
+  margin-left: auto;
   position: relative;
 }
 
-a .shnack {
-  text-decoration: none;
-  color: #EEE;
+.wrapper {
+  width: 100%;
+}
+
+.wrapper-white {
+  width: 100%;
+  background-color: $white;
+}
+
+.wrapper-cement {
+  width: 100%;
+  background-color: $cement;
+}
+
+.wrapper-black {
+  width: 100%;
+  background-color: $black;
+}
+
+.wrapper-red {
+  width: 100%;
+  background-color: $red;
+}
+
+.container {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  max-width: 1000px;
 }
