--- a/app/assets/stylesheets/components/general.scss
+++ b/app/assets/stylesheets/components/general.scss
@@ -9,8 +9,8 @@
   margin: 0px auto;
   min-width: 320px;
   max-width: 660px;
-  padding-top:60px;
-  padding-bottom:60px;
+  //padding-top:60px;
+  //padding-bottom:60px;
 
   @media (max-width: 600px) {
     padding-top:85px;
@@ -19,8 +19,8 @@
 }
 
 .the-menu {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  //padding-top: 60px;
+  //padding-bottom: 60px;
 }
 
 .panel-title {
