--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,29 +15,19 @@
 @import "bootstrap";
 @import url(https://fonts.googleapis.com/css?family=Poiret+One);
 @import url(https://fonts.googleapis.com/css?family=Damion);
-@import "base/*";
+@import "base/css_reset",
+        "base/vars",
+        "base/utilities",
+        "base/mixins",
+        "base/text_presentation",
+        "base/buttons",
+        "base/inputs";
 @import "components/*";
 
 $elements: base, phone, menu, topbar, user-settings;
 
 
-html,body
-{
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden; 
-}
 
-p {
-	font-family: "Poiret One", Geneva, sans-serif;
-}
-
-.website-wrapper {
-  width: 100%;
-  margin: 0;
-}
 
 .level {
 	width:60%;
@@ -55,9 +45,10 @@ p {
 
 #level-2 {
 	width: 100%;
-	padding: 0px 10px 20px 10px;
+	padding: 10px 10px 20px 10px;
   box-shadow: 0px 0px 20px black;
-	background-image: -webkit-gradient(
+  background-color: $black;
+	/*background-image: -webkit-gradient(
 		linear,
 		left top,
 		left bottom,
@@ -68,7 +59,7 @@ p {
 	background-image: -moz-linear-gradient(bottom, #9E1919 0%, #A62424 100%);
 	background-image: -webkit-linear-gradient(bottom, #9E1919 0%, #A62424 100%);
 	background-image: -ms-linear-gradient(bottom, #9E1919 0%, #A62424 100%);
-	background-image: linear-gradient(to bottom, #9E1919 0%, #A62424 100%);
+	background-image: linear-gradient(to bottom, #9E1919 0%, #A62424 100%);*/
 }
 
 
@@ -399,64 +390,3 @@ table.item-list {
 	text-align:center;
 }
 
-
-.topbar {
-  position: fixed;
-  z-index: index($elements, topbar);
-  left: 0;
-  right: 0;
-  top:0;
-  max-width: 880px;
-  margin: 0px auto 40px auto;
-  padding: 0px 30px;
-  color: #EEE;
-  background: $red;
-  display: block;
-  @include box-shadow(0, 0, 6px, $black);
-}
-
-.topbar .shnack {
-  width: 25%;
-}
-
-.prgs-bar {
-  width: 50%;
-  @extend .gen_inline;
-}
-
-.user-settings {
-  //width: 25%;
-  float: right;
-  @extend .gen_inline;
-}
-
-
-.step {
-  @extend .gen_inline; 
-  text-align: center;
-  float: left;
-  width: 33.33%;
-  padding: 0;
-  margin: 0;
-  &.current {
-    ///color: #CCC;
-    font-weight: 700;
-  }
-  &.current .circle {
-    background-color: khaki;
-  }
-  &.completed .circle {
-    //background-color: #444;
-  }
-}
-
-
-.circle {
-  border: 2px solid #AAA;
-  //background-color: #AAA;
-  border-radius:15px;
-  background-image: none;
-  width: 12px;
-  height: 12px;
-  margin: 0 auto;
-}
