--- a/app/assets/stylesheets/components/grid.scss
+++ b/app/assets/stylesheets/components/grid.scss
@@ -10,21 +10,26 @@
 .col-6 { width: 50%; }
 .col-12 { width: 100%; }
 
-.container {
-  width: 100%;
-  position: relative;
-}
 
-.row-new {
-  min-width: 320px;
-  max-width: 880px;
-  margin-right: 0px;
-  margin-left: 0px;
-  display: block;
-  &:after {
-    clear: both;
-    display: table;
-    content: ' ';
-  }
-}
 
+
+
+
+.row-new { @extend .clear-fix; width: 1200px; max-width: 100%; min-width: 320px; margin: 0 auto; }
+.column  { float: left; position: relative; min-height: 1px;}
+.column.centered { float: none; margin: 0 auto; }
+
+.one, .row-new .one { width: 8.33333%; }
+.two, .row-new .two { width: 16.66667%; }
+.three, .row-new .three { width: 25%; }
+.four, .row-new .four { width: 33.33333%; }
+.five, .row-new .five { width: 41.66667%; }
+.six, .row-new .six { width: 50%; }
+.seven, .row-new .seven { width: 58.33333%; }
+.eight, .row-new .eight { width: 66.66667%; }
+.nine, .row-new .nine { width: 75%; }
+.ten, .row-new .ten { width: 83.33333%; }
+.eleven, .row-new .eleven { width: 91.66667%; }
+.twelve, .row-new .twelve { width: 100%; }
+
+.row-new .offset-by-one { margin-left: 8.33333%; }
