--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,7 +13,7 @@
  */
 
 @import "bootstrap";
-@import url(https://fonts.googleapis.com/css?family=Poiret+One);
+@import url(http://fonts.googleapis.com/css?family=Dosis:400,500,700);
 @import url(https://fonts.googleapis.com/css?family=Damion);
 @import "base/css_reset",
         "base/vars",
@@ -22,10 +22,8 @@
         "base/text_presentation",
         "base/buttons",
         "base/inputs";
-@import "components/*";
-
-$elements: base, phone, menu, topbar, user-settings;
-
+@import "components/*",
+        "modules/*";
 
 
 
@@ -48,7 +46,7 @@ $elements: base, phone, menu, topbar, user-settings;
 	padding: 10px 10px 20px 10px;
   box-shadow: 0px 0px 20px black;
   background-color: $black;
-	/*background-image: -webkit-gradient(
+	background-image: -webkit-gradient(
 		linear,
 		left top,
 		left bottom,
@@ -59,12 +57,8 @@ $elements: base, phone, menu, topbar, user-settings;
 	background-image: -moz-linear-gradient(bottom, #9E1919 0%, #A62424 100%);
 	background-image: -webkit-linear-gradient(bottom, #9E1919 0%, #A62424 100%);
 	background-image: -ms-linear-gradient(bottom, #9E1919 0%, #A62424 100%);
-	background-image: linear-gradient(to bottom, #9E1919 0%, #A62424 100%);*/
+	background-image: linear-gradient(to bottom, #9E1919 0%, #A62424 100%);
 }
-
-
-
-
 
 #level-3 {
   width: 100%;
@@ -75,48 +69,13 @@ $elements: base, phone, menu, topbar, user-settings;
   min-height: 480px;
 }
 
-#footer {
-	max-width: 500px;
-	margin: 100px auto;
-}
 
-.foot-style {
-	font-family: "Poiret One", Geneva, sans-serif;
-}
-
-
-.my-container {
-	max-width: 980px;
-}
-
-
-
-tbody.all_the_mods tr {
-
-    td.customize-this {
-      background-color: #EEE;
-      color: #333;
-      text-align:center;
-      font-style: italic;
-    }
-
-    &.item-modifier {
-      background-color: #EEE;
-    }
-    &.opt-name {
-      background-color: #EEE;
-    }
-}
-
-
-.item-description {
-  background: lightgray;
-}
 
 
 .step-style {
   text-align: center;
   color: $white;
+  font-family: Dosis, sans-serif;
 }
 
 h1.step-style {
@@ -134,259 +93,23 @@ img.step-style {
   opacity: .9;
 }
 
-#phone{
-position: absolute;
-top: 20px;
-z-index: index($elements, phone);
-width: 230px;
-}
-
-
-#info-tagline {
- font-family: "Poiret One", Geneva, sans-serif; 
- font-size: 3.8em;
- color: $white;
-   font-weight: 600;
-  margin-bottom: 25px;
-  letter-spacing: 1;
-  line-height: .9em;
-}
-
-#info-text {
-  font-size: 1.5em;
-  color: $white;
-  font-family: "Poiret One", Geneva, sans-serif;
-  display: block;
-}
-
-.shnack {
-	font-family: "Damion", serif;
-	font-size:1.5em;
-}
-
-.caje {
-  font-size:1.5em;
-  font-weight: bold;
-}
-
-ul.info-links {
- 	list-style: none;
-	font-size: 3em;
-	font-family: "Damion", serif;
-  li {
-   	display: inline-block;
-  }
-  a {
-  	color: $red;
-  	text-decoration: none;
-  	&:hover {
-  		color: $white;
-  		border-bottom: 2px solid $red;
-  	}
-  }
-}
 
 
 
 
 
-#contact-us {
-	display: none;
-	width: 100%;
-	height: 200px;
-	//margin-top: 15px;
-}
 
 
-
-
-.contact-field {
-	width: 100%;
-}
-
-.notice {
-	text-align: center;
-	font-family: "Poiret One", Geneva, sans-serif;
-	font-size: 1.6em;
-	padding: 15px 0px;
-	color: green;
-	font-weight: bold;
-	margin-top: 10px;
-	background: rgba(140,250,0,.3);
-}
-
-.flash-error {
-	text-align: center;
-	font-family: "Poiret One", Geneva, sans-serif;
-	font-size: 1.6em;
-	padding: 15px 0px;
-	color: #780000;
-	font-weight: bold;
-	margin-top: 10px;
-	background: #F5E6E6;
-
-}
-
-input[type="tel"].error { border: 1px solid #780000  }
-
-.error {
-	margin-top:10px;
-	padding:3px;
-	border: 1px solid #780000;
-	border-radius:10px;
-	background-color:#F5E6E6;
-	font-family: "Poiret One", Geneva, sans-serif;
-	color:#780000;
-
-}
-
-/* SHNACK ATTACK */
-table.item-list {
-
- tr {
-    background-color: #FFF;
-    display: table-row;
-
-    &:nth-child(odd) {
-      background-color: #F9F9F9;
-    }
-
-    &:hover {
-      background-color: #FFFFF2;
-    }
-  }
-
-  td {
-    //border: 1px solid #E0E0E0;
-    padding: 5px;
-
-    button, select, input, textarea {
-      width: 100%;
-    }
-
-    &.single_icon {
-      text-align: center;
-      vertical-align: middle;
-    } 
-
-    &.numeric{
-      text-align: right;
-    }
-  }
-}
-
-button, input, textarea {
-  background: #FFFFFF;
-  border: solid 1px #E5E5E5;
-  font: normal 13px/100% Verdana, Tahoma, sans-serif;
-  margin-bottom: 10px;
-  outline: 0;
-  padding: 9px;
-  width: 100%;
-
-  &.red {
-    background-color: #C35050;
-    color: white;
-  }
-  &.green {
-    background-color: #50C350;
-    color: white;
-  }
-  &.blue {
-    background-color: #5050C3;
-    color: white;
-  }
-  &[disabled=disabled] {
-    background-color: #999;
-    color: white;
-    &:before {
-      font-family: "Damion";
-      content: "X ";
-      font-size: 1.5em;
-    }
-  }
-
-}
 
 
 .top-heading {
   background-color: #C35050;
 }
 
-table.item-list {
-  border-collapse: collapse;
-  width: 100%;
-
-	&.fixed-table {
-    table-layout: fixed;
-  }
-
-  th, th a{
-    border: 1px solid #E0E0E0;
-    background-color: #FFF;
-    color: #000;
-    font-size: 0.95em;
-    font-weight: bold;
-    padding: 5px;
-    text-decoration: none;
-    text-transform: capitalize;
-    vertical-align: bottom; 
-  }
-
-  tr {
-    background-color: #FFF;
-    display: table-row;
-
-    &:nth-child(even) {
-      background-color: #F9F9F9;
-    }
-
-    &:hover {
-      background-color: #FFFFF2;
-    }
-  }
-
-  td {
-    border: 1px solid #E0E0E0;
-    padding: 5px;
-    vertical-align: top;
-
-    select, input, textarea {
-      width: 100%;
-    }
-
-    &.dead_center {
-      text-align: center;
-      vertical-align: middle;
-    } 
-
-    &.numeric{
-      text-align: right;
-    }
-  }
-}
-
-.plain-filter {
-  * {
-    display: block;
-    width: 100%;
-  }
-
-  select,
-  input,
-  textarea {
-    margin-bottom: 5px;
-
-    &:last-child {
-      margin-bottom: 0px;
-    }
-  }
-}
-
 .caje-info {
 	font-size:2em;
 	color: dimgray;
-	font-family: "Poiret One", Geneva, sans-serif;
+	font-family: "Dosis", Geneva, sans-serif;
 	text-align:center;
 }
 
