--- a/app/assets/stylesheets/base/_inputs.scss
+++ b/app/assets/stylesheets/base/_inputs.scss
@@ -37,3 +37,6 @@ input[type="checkbox"]:checked.modifier + label {
   background-color:#444;
   border-color: khaki;
 }
+
+
+input[type="tel"].error { border: 1px solid #780000  }
