--- a/app/assets/stylesheets/base/_vars.scss
+++ b/app/assets/stylesheets/base/_vars.scss
@@ -2,6 +2,7 @@ $white: #EEE;
 $black: #222;
 $red: #A10;
 $cement: #6a717a;
+$blue: #428bca;
 
 .red { color: $red; }
 .cream { color: papayawhip; }
@@ -9,6 +10,7 @@ $cement: #6a717a;
 .white { color: $white; }
 .black { color: $black; }
 .cement { color: $cement; }
+.blue { color: $blue; }
 
 $elements: base, phone, menu, topbar, user-settings;
 
