--- a/app/assets/stylesheets/components/_grid.scss
+++ b/app/assets/stylesheets/components/_grid.scss
@@ -15,7 +15,7 @@
 
 
 
-.row-new { @extend .clear-fix; width: 1200px; max-width: 100%; min-width: 320px; margin: 0 auto; }
+.row-new { @extend .clear-fix; width: 1200px; max-width: 100%; min-width: 320px; margin: 0 auto; position: relative; }
 .column  { float: left; position: relative; min-height: 1px;}
 .column.centered { float: none; margin: 0 auto; }
 
