--- a/app/assets/stylesheets/custom-resizing.css.scss
+++ b/app/assets/stylesheets/custom-resizing.css.scss
@@ -11,26 +11,25 @@
 }
 
 
-@media (min-width: 992px) { 
-
-	.logo {
-		width:100%
-	}
-}
 
 //awkward tablet
-@media (max-width: 755px) {
-	
-	#phone {
-		display:none;
-	}
-	p.step-style {
-		display: none;
-	}
-	ul.info-links {
-		font-size: 2.2em;
-		margin: 0px;
-	}
+@media (max-width: 750px) {
+
+  .prime-info {
+    padding-left: 0px !important;
+
+    .prime-text {
+      width: 100% !important;
+      padding-right: 5px !important;
+    }
+    img.phone {
+      display: none !important;
+    }
+
+    p {
+      font-size: 18px !important;
+    }
+  }
 }
 
 //PHONE SIZE
