--- a/app/views/application/howdy.html.erb
+++ b/app/views/application/howdy.html.erb
@@ -27,7 +27,7 @@
 
 </head>  
 
-  <body onload="checkDevice();">
+  <body>
 
     <div class="wrapper-black">
       <section class="my-container prime-info">
