--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 </head>
 
 
-<body onload="checkDevice();">
+<body>
 
 	<div class="website-wrapper">
 		<div id="topbar" class="topbar clear-fix">
