--- a/app/assets/stylesheets/custom-resizing.css.scss
+++ b/app/assets/stylesheets/custom-resizing.css.scss
@@ -1,8 +1,10 @@
-
+//all for the TOPBAR
 @media (max-width: 520px) {
   .item-name { width: 50%; }
   .item-price { width: 25%; }
   .item-desc { display: none; }
+
+  .topbar + div { padding-top: 80px !important; }
   .prgs-bar { display: block; width: 100% !important;}
   //.step { display: inline-block; width: 32%; }
   .topbar { padding: 0 2px 4px 2px !important; }
