--- a/app/views/application/howdy.html.erb
+++ b/app/views/application/howdy.html.erb
@@ -39,10 +39,10 @@
         </nav>
 
         <div class="row-new">
-          <div class="column eight prime-text" id="info-text">
-            <p>Shnack is a mobile application designed for concessions at large and small scale events, that lets customers order and pay for a vendor's food via their phone. Shnack eliminates the time customers are spending standing in lines by providing a quick and elegant way to purchase food from your seat. Customers will order food from their phone and will be notified when their food is ready to be picked up. By eliminating the need to wait in line, we can increase customer satisfaction, increase vendor revenue, and ultimately help provide a superior experience to customers.</p>
+          <div class="column eight prime-text">
+            <p id="info-text">Shnack is a mobile application designed for concessions at large and small scale events, that lets customers order and pay for a vendor's food via their phone. Shnack eliminates the time customers are spending standing in lines by providing a quick and elegant way to purchase food from your seat. Customers will order food from their phone and will be notified when their food is ready to be picked up. By eliminating the need to wait in line, we can increase customer satisfaction, increase vendor revenue, and ultimately help provide a superior experience to customers.</p>
 
-            <div id="contact-us" class="row">
+            <div id="contact-us" class="row-new">
               <%= render 'contact_us_mailer/contact_us_mailer' %>
             </div>
 
