--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,14 +1,41 @@
 
 
-
 	<%= render 'shared/order_details' %>
 
+  <% if @owner.cash_only %>
+      <div class="text-center" style="width:100%">
 
+        <%= button_tag(type: 'submit', id: "confirm-button", class: "btn btn-danger") do %>
+          <i class="glyphicon glyphicon-cutlery icon-white"></i> Confirm Order
+        <% end %> <br />
+      </div>
+
+  <% else %>
     <% if user_signed_in? && current_user.has_cards? %>
+      <div class="select-card-form">
+        <% current_user.cards.each_with_index do |card, index| %>
+        <div class="chopped box">
+            <%= radio_button_tag(:user_card, index) %> 
+            <label></label>
+            <label style="margin-left:5px;"><%= card.last4 + " " + card.brand %></label>
+        </div>
+        <br />
+        <br />
+        <% end %>
+        <div class ="chopped box">
+            <%= radio_button_tag(:user_card, "new", false, :class => "charges", id: "new-card-button" ) %>
+<!--             <label class="charges"></label>
+ -->            <label class="charges" style="margin-left:5px;"> Add a new card </label>
+        </div>
+
+        <%= render 'credit_card_form' %>
+
+      </div>
 
     <% else %>
-      <%= render 'create_account_login' %>
+      <%= render 'credit_card_form' %>
     <% end %>
+  <% end %>
   <div class="error stripe-error" style="display:none;"> </div>
   <div class="error name-error" style="display:none;">Please enter your name</div>
   <div class="error phone-error" style="display:none;">Please enter your phone number or we won't be able to let you know when your order's ready!</div>
