account in user flow now works

--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -4,34 +4,16 @@
 
 
     <% if user_signed_in? && current_user.has_cards? %>
-      <div class="select-card-form">
-        <% current_user.cards.each_with_index do |card, index| %>
-        <div class="chopped box">
-            <%= radio_button_tag(:user_card, index) %> 
-            <label></label>
-            <label style="margin-left:5px;"><%= card.last4 + " " + card.brand %></label>
-        </div>
-        <br />
-        <br />
-        <% end %>
-        <div class ="chopped box">
-            <%= radio_button_tag(:user_card, "new", false, :class => "charges", id: "new-card-button" ) %>
-<!--             <label class="charges"></label>
- -->            <label class="charges" style="margin-left:5px;"> Add a new card </label>
-        </div>
-
-        <%= render 'credit_card_form' %>
-
-      </div>
-
+      <%= render 'logged_in_payment' %>
     <% else %>
       <%= render 'create_account_login' %>
     <% end %>
 
   <div class="error stripe-error" style="display:none;"> </div>
   <div class="error name-error" style="display:none;">Please enter your name</div>
-  <div class="error phone-error" style="display:none;">Please enter your phone number or we won't be able to let you know when your order's ready!</div>
-  <div class="error email-error" style="display:none;"> Please enter your e-mail address or we won't be able to send you your receipt!</div>
+  <div class="error phone-error" style="display:none;">Please enter a valid phone number or we won't be able to let you know when your order's ready!</div>
+  <div class="error email-error" style="display:none;"> Please enter a valid e-mail address or we won't be able to send you your receipt!</div>
+  <div class="error password-error" style="display:none;"> Please enter a password of at least 6 characters </div>
 
 <script type="text/javascript" src="https://js.stripe.com/v2/"> </script>
 
