--- a/app/views/charges/_create_account_login.html.erb
+++ b/app/views/charges/_create_account_login.html.erb
@@ -5,17 +5,18 @@
    <button class="column six right" id="log-in">Log In</button>
 </div>
 
-<%= form_tag order_charges_path(@order), :id => "create-account-form" do %>
-	<div class="row-new">
+<div class="row-new" id="create-account-div">
+	<%= form_tag order_charges_path(@order), :id => "create-account-form" do %>
+
 		<%= text_field(:user, :name, :class=> "form-control", :id => "order-name", :placeholder => "Name" ) %>
 	  	<%= telephone_field(:user, :phone, :class => "form-control",:id => "order-phone-number", :placeholder => "Phone #") %>
 	    <%= text_field(:user, :email, :class =>"form-control", :id=> "order-email", :placeholder => "E-mail Address") %>
-	    <%= password_field(:user, :email, :class => "form-control", :id => "password", :placeholder => "Password") %>
-      <% end %>
-	     <%= render 'credit_card_form', :locals => { :form_id => "create-account-form", :button_text => "Create Account & Pay For Order" } %>
+	    <%= password_field(:user, :password, :class => "form-control", :id => "order-password", :placeholder => "Password") %>
+    <% end %>
+	<%= render 'credit_card_form', :locals => { :form_id => "create-account-form", :button_text => "Create Account & Pay For Order", :button_id => "pay-button"} %>
 
 	   
-	</div>
+</div>
 
 
 <%= form_tag "/orders/#{@order.id}/login", :id=>"login-form" do %>
