--- a/app/views/charges/_credit_card_form.html.erb
+++ b/app/views/charges/_credit_card_form.html.erb
@@ -4,21 +4,22 @@
       <div class="new-card-form">
         <%= text_field_tag :credit_card_number, nil, :class => "form-control", :placeholder => "Credit Card Number"  %> 
         <div class="row"> 
-          <div class="col-sm-4">
+          <div class="col-xs-4">
             <%= text_field_tag :expiration_month, nil,  :class => "form-control", :placeholder => "MM" %>
           </div>
-          <div class="col-sm-4">
+          <div class="col-xs-4">
             <%= text_field_tag :expiration_year, nil, :class => "form-control", :placeholder => "YY" %>
           </div>
-          <div class="col-sm-4">
+          <div class="col-xs-4">
             <%= text_field_tag :security_code, nil, :class => "form-control", :placeholder => "CVC" %>
           </div>
         </div>
       </div>
     </div>
     <div class="col-sm-12">
-      <%= button_tag(type: 'submit', class: "btn btn-primary") do %>
+      <%= button_tag(type: 'submit', class: "btn btn-primary", id: locals[:button_id]) do %>
         <%= locals[:button_text] %>
       <% end %>
   </div>
+</div>
 <% end %>
