--- a/app/views/charges/_logged_in_payment.html.erb
+++ b/app/views/charges/_logged_in_payment.html.erb
@@ -1,4 +1,10 @@
-      <div class="select-card-form">
+      <div class="select-card-div">
+        <%= form_tag order_charges_path(@order), :id => "select-card-form" do %>
+
+        <%= text_field(:user, :name, :class=> "form-control", :id => "order-name", :value => current_user.name ) %>
+        <%= telephone_field(:user, :phone, :class => "form-control",:id => "order-phone-number", :value => current_user.number ) %>
+        E-mail Address: <%= current_user.email %> <br /> <br />
+
         <% current_user.cards.each_with_index do |card, index| %>
         <div class="chopped box">
             <%= radio_button_tag(:user_card, index) %> 
@@ -10,10 +16,14 @@
         <% end %>
         <div class ="chopped box">
             <%= radio_button_tag(:user_card, "new", false, :class => "charges", id: "new-card-button" ) %>
-<!--             <label class="charges"></label>
- -->            <label class="charges" style="margin-left:5px;"> Add a new card </label>
+            <label class="charges" style="margin-left:5px;"> Add a new card </label>
         </div>
 
-        <%= render 'credit_card_form' %>
+        <% end %>
+
+
+        
+
+        <%= render 'credit_card_form', :locals => { :form_id => "select-card-form", :button_text => "Pay For Order", :button_id => "pay-logged-in-button" }%>
 
       </div>
