--- a/app/assets/stylesheets/custom-resizing.css.scss
+++ b/app/assets/stylesheets/custom-resizing.css.scss
@@ -1,8 +1,9 @@
 //all for the TOPBAR
 @media (max-width: 520px) {
-  .item-name { width: 50%; }
-  .item-price { width: 25%; }
-  .item-desc { display: none; }
+  .item-name { width: 33.33333% !important; }
+  .plus-to-cart { width: 18.6666% !important; }
+  .minus-to-cart { width: 18.6666% !important; }
+  .item-description { clear: both !important; width: 100% !important; }
 
   .topbar + div { padding-top: 80px !important; }
   .prgs-bar { display: block; width: 100% !important;}
