--- a/app/views/receipt_mailer/receipt_email.text.erb
+++ b/app/views/receipt_mailer/receipt_email.text.erb
@@ -1,4 +1,4 @@
-Your order #<%= @order.id %> at <%= @order.location_name %> has been placed
+Your order #<%= @order.order_number %> at <%= @order.location_name %> has been placed
 =============================================================================
 
 <% @order_items.each do |order_item| %>
