--- a/app/views/charges/_logged_in_payment.html.erb
+++ b/app/views/charges/_logged_in_payment.html.erb
@@ -2,7 +2,7 @@
         <%= form_tag order_charges_path(@order), :id => "select-card-form" do %>
 
         <%= text_field(:user, :name, :class=> "form-control", :id => "order-name", :value => current_user.name ) %>
-        <%= telephone_field(:user, :phone, :class => "form-control",:id => "order-phone-number", :value => current_user.number ) %>
+        <%= telephone_field(:user, :number, :class => "form-control",:id => "order-phone-number", :value => current_user.number ) %>
         E-mail Address: <%= current_user.email %> <br /> <br />
 
         <% current_user.cards.each_with_index do |card, index| %>
@@ -22,7 +22,7 @@
         <% end %>
 
 
-        
+
 
         <%= render 'credit_card_form', :locals => { :form_id => "select-card-form", :button_text => "Pay For Order", :button_id => "pay-logged-in-button" }%>
 
