--- a/app/views/receipt_mailer/receipt_email.html.erb
+++ b/app/views/receipt_mailer/receipt_email.html.erb
@@ -9,7 +9,7 @@
 
 <%= render 'shared/order_details' %>
 
-<%= link_to 'View Your Order', order_path(@order) %>
+https://www.shnackapp.com/<%= order_path @order %>
 
 <h5 class="text-center"> Thank you for using Shnack! If you had any problems or would like to give us feedback, we'd love to hear what you have to say! E-mail us at contact@shnackapp.com </h5>
   </body>
